--- a/football-app/package.json
+++ b/football-app/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
